# DART-Optimizer

./: .gitignore  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  setup.py
dart_utils/: __init__.py  accelerator.py  models.py  training.py
dartopt/: __init__.py
dartopt/optim/: __init__.py  dart.py
dartopt/utils/: __init__.py  accelerator.py  models.py  training.py
tests/: __init__.py  test_dart_optimizer.py
